<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.fragment.AboutUsFragment">

    <include
        android:id="@+id/appbar"
        layout="@layout/appbar_main" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/_16sdp"
            android:paddingVertical="@dimen/_16sdp">

            <TextView
                android:id="@+id/heading_about_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/about_us"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:id="@+id/txt_about_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_14sdp"
                android:text="@string/about_us_text"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/heading_terms_conditions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/terms_amp_conditions"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:id="@+id/txt_terms_conditions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_14sdp"
                android:text="@string/terms_conditions_text"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/heading_privacy_policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/privacy_policy"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:id="@+id/txt_privacy_policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_14sdp"
                android:text="@string/privacy_policy_text"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>